# dagorama

./: .gitignore  README.md  broker.Dockerfile  broker.entrypoint.sh  build.sh  build_protobuf.sh  lint.sh  pyproject.toml  sample_dag.py
.github/workflows/: publish-broker-docker.yml  publish-broker-python.yml  publish-broker.yml  publish.yml  test.yml
broker/: README.md  broker.go  broker_test.go  config.go  dag_instance.go  dag_node.go  dag_node_test.go  database.go  database_test.go  go.mod  go.sum  heap.go  heap_test.go  main.go  main_test.go  retry.go  retry_test.go  server.go  utilities.go  utilities_bun.go
broker/api/: api.pb.go  api.proto  api_grpc.pb.go
dagorama/: cli.py  code_signature.py  decorators.py  definition.py  hot_reload.py  inspection.py  logging.py  models.py  retry.py  runner.py  serializer.py  settings.py
dagorama-broker/: README.md  build.py  pyproject.toml
dagorama-broker/dagorama_broker/: launch.py
dagorama-broker/dagorama_broker/assets/: __init__.py
dagorama/api/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  api_pb2_grpc.pyi
dagorama/models/: arguments.py  promise.py
dagorama/tests/: conftest.py  test_code_signature.py  test_decorators.py  test_definition.py  test_hot_reload.py  test_inspection.py  test_logging.py  test_retry.py  test_runner.py  test_sample_dag.py  test_typecheck.py
protos/dagorama/api/: api.proto
