[tool.poetry]
name = "dagorama"
version = "0.1.3"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.50.0"
click = "^8.1.3"
protobuf = "^4.21.9"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
isort = "^5.10.1"
pytest = "^7.2.0"
grpcio-tools = "^1.50.0"
mypy-protobuf = "^3.4.0"
types-protobuf = "^3.20.4.2"
grpc-stubs = "^1.24.11"
types-setuptools = "^65.5.0.2"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
worker = "dagorama.cli:worker"
